testsuite/tests/contrib/lkt_semantic/dot_call_invalid/test.out
Resolving test.lkt
==================
Id   <RefId "Int" test.lkt:3:8-3:11>
     references <StructDecl prelude: "Int">

Expr <NumLit test.lkt:3:14-3:15>
     has type <StructDecl prelude: "Int">

Id   <RefId "Int" test.lkt:4:17-4:20>
     references <StructDecl prelude: "Int">

Id   <RefId "a" test.lkt:4:23-4:24>
     references <ValDecl "a" test.lkt:3:1-3:15>

Expr <RefId "a" test.lkt:4:23-4:24>
     has type <StructDecl prelude: "Int">

test.lkt:4:25: error: Cannot find entity `plus` in this scope
4 | @invalid val b: Int = a.plus(2)
  |                         ^^^^

